[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]

name = "pasarguard-panel-api"
dynamic = ["version"]
description = "Small async SDK for the Pasarguard panel"
authors = [ { name = "PlushkaNet" } ]
readme = "README.md"

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.20.0"
]

[project.urls]
Repository = "https://github.com/PlushkaNet/pasarguard-panel-api"

[tool.hatch.version]
path = "pasarguard_panel_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pasarguard_panel_api"]